# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Documentation for Payroll and Payslip management.",
-        "title": "Payslip System API",
+        "title": "Payroll System API",
         "contact": {},
         "version": "1.0"
     },
@@ -340,6 +340,71 @@
                 }
             }
         },
+        "/payrolls/{year}/{month}/summary": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Generates a summary of all employee payslips for a given month and year.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payroll"
+                ],
+                "summary": "Get payroll summary",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Year",
+                        "name": "year",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Month",
+                        "name": "month",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.SuccessResponse-dto_PayrollSummaryResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/payslips/{year}/{month}": {
             "get": {
                 "security": [
@@ -458,6 +523,14 @@
         }
     },
     "definitions": {
+        "dto.AttendanceBreakdownItem": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.AttendanceResponse": {
             "type": "object",
             "properties": {
@@ -472,6 +545,29 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.EmployeePayslipBrief": {
+            "type": "object",
+            "properties": {
+                "base_salary": {
+                    "type": "number"
+                },
+                "overtime_pay": {
+                    "type": "number"
+                },
+                "reimbursement": {
+                    "type": "number"
+                },
+                "total_pay": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -523,6 +619,17 @@
                 }
             }
         },
+        "dto.OvertimeBreakdownItem": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "hours_worked": {
+                    "type": "number"
+                }
+            }
+        },
         "dto.PayrollResponse": {
             "type": "object",
             "properties": {
@@ -543,13 +650,49 @@
                 }
             }
         },
+        "dto.PayrollSummaryResponse": {
+            "type": "object",
+            "properties": {
+                "month": {
+                    "type": "integer"
+                },
+                "payroll_id": {
+                    "type": "integer"
+                },
+                "payslips": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.EmployeePayslipBrief"
+                    }
+                },
+                "total_salaries": {
+                    "type": "number"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.PayslipResponse": {
             "type": "object",
             "properties": {
                 "attendance_breakdown": {
-                    "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.AttendanceBreakdownItem"
+                    }
                 },
                 "base_salary": {
+                    "description": "summary totals",
+                    "type": "number"
+                },
+                "days_attended": {
+                    "type": "integer"
+                },
+                "expected_working_days": {
+                    "type": "integer"
+                },
+                "hourly_rate": {
                     "type": "number"
                 },
                 "id": {
@@ -558,19 +701,33 @@
                 "month": {
                     "type": "integer"
                 },
+                "monthly_salary": {
+                    "description": "calculation context",
+                    "type": "number"
+                },
                 "overtime_breakdown": {
-                    "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.OvertimeBreakdownItem"
+                    }
                 },
                 "overtime_pay": {
+                    "type": "number"
+                },
+                "overtime_rate_per_hour": {
                     "type": "number"
                 },
                 "reimbursement": {
                     "type": "number"
                 },
                 "reimbursement_breakdown": {
-                    "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ReimbursementBreakdownItem"
+                    }
                 },
                 "total_hours_worked": {
+                    "description": "breakdowns",
                     "type": "number"
                 },
                 "total_overtime_hours": {
@@ -584,6 +741,20 @@
                 },
                 "year": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.ReimbursementBreakdownItem": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         },
@@ -665,6 +836,17 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/dto.PayrollResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.SuccessResponse-dto_PayrollSummaryResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.PayrollSummaryResponse"
                 },
                 "message": {
                     "type": "string"
